<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <include layout="@layout/fragment_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"></android.support.v4.view.ViewPager>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/grey_300"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_home"
                style="@style/viewpager_navigation_bar_tab_style"
                android:drawableTop="@drawable/home"
                android:text="@string/item_home"/>

            <TextView
                android:id="@+id/tv_location"
                style="@style/viewpager_navigation_bar_tab_style"
                android:drawableTop="@drawable/location"
                android:text="@string/item_location"/>

            <TextView
                android:id="@+id/tv_like"
                style="@style/viewpager_navigation_bar_tab_style"
                android:drawableTop="@drawable/like"
                android:text="@string/item_like"/>

            <TextView
                android:id="@+id/tv_person"
                style="@style/viewpager_navigation_bar_tab_style"
                android:drawableTop="@drawable/person"
                android:text="@string/item_person"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>